Fix improper usage of the 1/2 fraction in various places.

--- a/tex/p021.tex
+++ b/tex/p021.tex
@@ -20,7 +20,7 @@
 \vs p021 2:7 \pc The types and patterns of \bibemph{mind} are determined by the precreature factors of being. After these have been associated to constitute a creature (personal or otherwise), mind is the endowment of the Third Source and Centre, the universal source of mind ministry to all beings below the level of Paradise Creators.
 \vs p021 2:8 \pc The control of \bibemph{spirit} designs and types depends on the level of their manifestation. In the last analysis, spiritual design is controlled by the Trinity or by the pre\hyp{}Trinity spirit endowments of the Trinity personalities --- Father, Son, and Spirit.
 \vs p021 2:9 \pc When such a perfect and divine Son has taken possession of the space site of his chosen universe; when the initial problems of universe materialization and of gross equilibrium have been resolved; when he has formed an effective and co\hyp{}operative working union with the complemental Daughter of the Infinite Spirit --- then do this Universe Son and this Universe Spirit initiate that liaison which is designed to give origin to the innumerable hosts of their local universe children. In connection with this event the Creative Spirit focalization of the Paradise Infinite Spirit becomes changed in nature, taking on the personal qualities of the Mother Spirit of a local universe.
-\vs p021 2:10 Notwithstanding that all Creator Sons are divinely like their Paradise parents, none exactly resembles another; each is unique, diverse, exclusive, and original in \bibemph{nature} as well as in personality. And since they are the architects and makers of the life plans of their respective realms, this very diversity ensures that their domains will also be diverse in every form and phase of Michael\hyp{}derived living existence which may be created or subsequently evolved therein. Hence the orders of creatures native to the local universes are quite varied. No two are administered or inhabited by dual\hyp{}origin native beings who are in all respects identical. Within any superuniverse, ½ of their inherent attributes are quite alike, being derived from the uniform Creative Spirits; the other half vary, being derived from the diversified Creator Sons. But such diversity does not characterize those creatures of sole origin in the Creative Spirit nor those imported beings who are native to the central or superuniverses.
+\vs p021 2:10 Notwithstanding that all Creator Sons are divinely like their Paradise parents, none exactly resembles another; each is unique, diverse, exclusive, and original in \bibemph{nature} as well as in personality. And since they are the architects and makers of the life plans of their respective realms, this very diversity ensures that their domains will also be diverse in every form and phase of Michael\hyp{}derived living existence which may be created or subsequently evolved therein. Hence the orders of creatures native to the local universes are quite varied. No two are administered or inhabited by dual\hyp{}origin native beings who are in all respects identical. Within any superuniverse, one half of their inherent attributes are quite alike, being derived from the uniform Creative Spirits; the other half vary, being derived from the diversified Creator Sons. But such diversity does not characterize those creatures of sole origin in the Creative Spirit nor those imported beings who are native to the central or superuniverses.
 \vs p021 2:11 \pc When a Michael Son is absent from his universe, its government is directed by the first\hyp{}born native being, the Bright and Morning Star, the local universe chief executive. The advice and counsel of the Union of Days is invaluable at such times. During these absences a Creator Son is able to invest the associated Mother Spirit with the overcontrol of his spiritual presence on the inhabited worlds and in the hearts of his mortal children. And the Mother Spirit of a local universe remains always at its headquarters, extending her fostering care and spiritual ministry to the uttermost parts of such an evolutionary domain.
 \vs p021 2:12 The personal presence of a Creator Son in his local universe is not necessary to the smooth running of an established material creation. Such Sons may journey to Paradise, and still their universes swing on through space. They may lay down their lines of power to incarnate as the children of time; still their realms whirl on about their respective centres. No material organization is independent of the absolute\hyp{}gravity grasp of Paradise or of the cosmic overcontrol inherent in the space presence of the Unqualified Absolute.
 \usection{3.\bibnobreakspace Local Universe Sovereignty}
