--- a/tex/p026.tex
+++ b/tex/p026.tex
@@ -39,7 +39,7 @@
 \vs p026 3:9 \ublistelem{6.}\bibnobreakspace \bibemph{The Transport Personalities.} These beings, of origin on circuit number 6, usually operate from planet number 40 in the outermost circuit. It is they who take away the disappointed candidates who transiently fail in the Deity adventure. They stand ready to serve all who must come and go in the service of Havona, and who are not space traversers.
 \vs p026 3:10 \ublistelem{7.}\bibnobreakspace \bibemph{The Reserve Corps.} The fluctuations in the work with the ascendant beings, the Paradise pilgrims, and other orders of beings sojourning in Havona, make it necessary to maintain these reserves of supernaphim on the pilot world of the seventh circle, where they take origin. They are created without special design and are competent to take up service in the less exacting phases of any of the duties of their superaphic associates of the tertiary order.
 \usection{4.\bibnobreakspace The Secondary Supernaphim}
-\vs p026 4:1 The secondary supernaphim are ministers to the seven planetary circuits of the central universe. Part are devoted to the service of the pilgrims of time, and ½ of the entire order is assigned to the training of the Paradise pilgrims of eternity. These Paradise Citizens, in their pilgrimage through the Havona circuits, are also attended by volunteers from the Mortal Finality Corps, an arrangement that has prevailed since the completion of the first finaliter group.
+\vs p026 4:1 The secondary supernaphim are ministers to the seven planetary circuits of the central universe. Part are devoted to the service of the pilgrims of time, and one half of the entire order is assigned to the training of the Paradise pilgrims of eternity. These Paradise Citizens, in their pilgrimage through the Havona circuits, are also attended by volunteers from the Mortal Finality Corps, an arrangement that has prevailed since the completion of the first finaliter group.
 \vs p026 4:2 \pc According to their periodic assignment to the ministry of the ascending pilgrims, secondary supernaphim work in the following seven groups:
 \vs p026 4:3 \ublistelem{1.}\bibnobreakspace Pilgrim Helpers.
 \vs p026 4:4 \ublistelem{2.}\bibnobreakspace Supremacy Guides.
