--- a/tex/p043.tex
+++ b/tex/p043.tex
@@ -25,7 +25,7 @@
 \vs p043 1:4 The Edentia highlands are magnificent physical features, and their beauty is enhanced by the endless profusion of life which abounds throughout their length and breadth. Excepting a few rather isolated structures, these highlands contain no work of creature hands. Material and morontial ornamentations are limited to the dwelling areas. The lesser elevations are the sites of special residences and are beautifully embellished with both biologic and morontia art.
 \vs p043 1:5 \pc Situated on the summit of the seventh highland range are the resurrection halls of Edentia, wherein awaken the ascending mortals of the secondary modified order of ascension. These chambers of creature reassembly are under the supervision of the Melchizedeks. The first of the receiving spheres of Edentia (like the planet Melchizedek near Salvington) also has special resurrection halls, wherein the mortals of the modified orders of ascension are reassembled.
 \vs p043 1:6 The Melchizedeks also maintain two special colleges on Edentia. One, the emergency school, is devoted to the study of problems growing out of the Satania rebellion. The other, the bestowal school, is dedicated to the mastery of the new problems arising out of the fact that Michael made his final bestowal on one of the worlds of Norlatiadek. This latter college was established almost 40,000 years ago, immediately after the announcement by Michael that Urantia had been selected as the world for his final bestowal.\fnc{\ldots{}established almost \bibtextul{four} thousand years ago, immediately after\ldots{} \bibexpl{The second edition correction appears to be warranted based on a reference at \bibref[119:7.2]{p0119 7:2} in the text: “The public announcement that Michael had selected Urantia as the theatre for his final bestowal was made shortly after we learned about the default of Adam and Eve. And thus, for more than thirty-five thousand years, your world occupied a very conspicuous place in the councils of the entire universe.” The default occurred about 37,800 years ago, so “almost forty thousand” and “more than thirty-five thousand” would seem to be equally reasonable descriptions. The committee concluded that the problem here is identical in origin to that of \bibref[41:4.4]{p041 4:4} in the text: the number in question was written as a numeral in the manuscript (40,000 not forty thousand), and the error was caused by the loss of a zero before the number was formatted into words for printing.}}
-\vs p043 1:7 \pc The sea of glass, the receiving area of Edentia, is near the administrative centre and is encircled by the headquarters amphitheatre. Surrounding this area are the governing centres for the 70 divisions of constellation affairs. ½ of Edentia is divided into 70 triangular sections, whose boundaries converge at the headquarters buildings of their respective sectors. The remainder of this sphere is one vast natural park, the gardens of God.
+\vs p043 1:7 \pc The sea of glass, the receiving area of Edentia, is near the administrative centre and is encircled by the headquarters amphitheatre. Surrounding this area are the governing centres for the 70 divisions of constellation affairs. One half of Edentia is divided into 70 triangular sections, whose boundaries converge at the headquarters buildings of their respective sectors. The remainder of this sphere is one vast natural park, the gardens of God.
 \vs p043 1:8 During your periodic visits to Edentia, though the entire planet is open to your inspection, most of your time will be spent in that administrative triangle whose number corresponds to that of your current residential world. You will always be welcome as an observer in the legislative assemblies.
 \vs p043 1:9 The morontia area assigned to ascending mortals resident on Edentia is located in the mid\hyp{}zone of the 35\ts{th} triangle adjoining the headquarters of the finaliters, situated in the 36\ts{th} triangle. The general headquarters of the univitatia occupies an enormous area in the mid\hyp{}region of the 34\ts{th} triangle immediately adjoining the residential reservation of the morontia citizens. From these arrangements it may be seen that provision is made for the accommodation of at least 70 major divisions of celestial life, and also that each of these 70 triangular areas is correlated with some one of the 70 major spheres of morontia training.
 \vs p043 1:10 The Edentia sea of glass is one enormous circular crystal about 160\,km in circumference and about 48\,km in depth. This magnificent crystal serves as the receiving field for all transport seraphim and other beings arriving from points outside the sphere; such a sea of glass greatly facilitates the landing of transport seraphim.
@@ -86,7 +86,7 @@
 \vs p043 5:17 Every quarantined or isolated world has a Vorondadek Son acting as an observer. He does not participate in planetary administration except when ordered by the Constellation Father to intervene in the affairs of the nations. Actually it is this Most High observer who “rules in the kingdoms of men.” Urantia is one of the isolated worlds of Norlatiadek, and a Vorondadek observer has been stationed on the planet ever since the Caligastia betrayal. When Machiventa Melchizedek ministered in semimaterial form on Urantia, he paid respectful homage to the Most High observer then on duty, as it is written, “And Melchizedek, king of Salem, was the priest of the Most High.” Melchizedek revealed the relations of this Most High observer to Abraham when he said, “And blessed be the Most High, who has delivered your enemies into your hand.”
 \usection{6.\bibnobreakspace The Gardens of God}
 \vs p043 6:1 The system capitals are particularly beautified with material and mineral constructions, while the universe headquarters is more reflective of spiritual glory, but the capitals of the constellations are the acme of morontia activities and living embellishments. On the constellation headquarters worlds living embellishment is more generally utilized, and it is this preponderance of life --- botanic artistry --- that causes these worlds to be called “the gardens of God.”
-\vs p043 6:2 \pc About ½ of Edentia is devoted to the exquisite gardens of the Most Highs, and these gardens are among the most entrancing morontia creations of the local universe. This explains why the extraordinarily beautiful places on the inhabited worlds of Norlatiadek are so often called “the garden of Eden.”
+\vs p043 6:2 \pc About one half of Edentia is devoted to the exquisite gardens of the Most Highs, and these gardens are among the most entrancing morontia creations of the local universe. This explains why the extraordinarily beautiful places on the inhabited worlds of Norlatiadek are so often called “the garden of Eden.”
 \vs p043 6:3 Centrally located in this magnificent garden is the worship shrine of the Most Highs. The Psalmist must have known something about these things, for he wrote: “Who shall ascend the hill of the Most Highs? Who shall stand in this holy place? He who has clean hands and a pure heart, who has not lifted up his soul to vanity nor sworn deceitfully.” At this shrine the Most Highs, on every tenth day of relaxation, lead all Edentia in the worshipful contemplation of God the Supreme.
 \vs p043 6:4 \pc The architectural worlds enjoy 10 forms of life of the material order. On Urantia there is plant and animal life, but on such a world as Edentia there are 10 divisions of the material orders of life. Were you to view these 10 divisions of Edentia life, you would quickly classify the first three as vegetable and the last three as animal, but you would be utterly unable to comprehend the nature of the intervening four groups of prolific and fascinating forms of life.
 \vs p043 6:5 Even the distinctively animal life is very different from that of the evolutionary worlds, so different that it is quite impossible to portray to mortal minds the unique character and affectionate nature of these nonspeaking creatures. There are thousands upon thousands of living creatures which your imagination could not possibly picture. The whole animal creation is of an entirely different order from the gross animal species of the evolutionary planets. But all this animal life is most intelligent and exquisitely serviceable, and all the various species are surprisingly gentle and touchingly companionable. There are no carnivorous creatures on such architectural worlds; there is nothing in all Edentia to make any living being afraid.
