--- a/tex/p045.tex
+++ b/tex/p045.tex
@@ -96,8 +96,8 @@
 \vs p045 6:4 \pc No surviving mortal, midwayer, or seraphim may ascend to Paradise, attain the Father, and be mustered into the Corps of the Finality without having passed through that sublime experience of achieving parental relationship to an evolving child of the worlds or some other experience analogous and equivalent thereto. The relationship of child and parent is fundamental to the essential concept of the Universal Father and his universe children. Therefore does such an experience become indispensable to the experiential training of all ascenders.
 \vs p045 6:5 The ascending midway creatures and the evolutionary seraphim must pass through this parenthood experience in association with the Material Sons and Daughters of the system headquarters. Thus do such nonreproducing ascenders obtain the experience of parenthood by assisting the Jerusem Adams and Eves in rearing and training their progeny.
 \vs p045 6:6 All mortal survivors who have not experienced parenthood on the evolutionary worlds must also obtain this necessary training while sojourning in the homes of the Jerusem Material Sons and as parental associates of these superb fathers and mothers. This is true except in so far as such mortals have been able to compensate their deficiencies on the system nursery located on the first transitional\hyp{}culture world of Jerusem.
-\vs p045 6:7 \pc This probation nursery of Satania is maintained by certain morontia personalities on the finaliters’ world, ½ of the planet being devoted to this work of child rearing. Here are received and reassembled certain children of surviving mortals, such as those offspring who perished on the evolutionary worlds before acquiring spiritual status as individuals. The ascension of either of its natural parents ensures that such a mortal child of the realms will be accorded repersonalization on the system finaliter planet and there be permitted to demonstrate by subsequent freewill choice whether or not it elects to follow the parental path of mortal ascension. Children here appear as on the nativity world except for the absence of sex differentiation. There is no reproduction of mortal kind after the life experience on the inhabited worlds.
-\vs p045 6:8 Mansion world students who have one or more children in the probationary nursery on the finaliters’ world, and who are deficient in essential parental experience, may apply for a Melchizedek permit which will effect their temporary transfer from ascension duties on the mansion worlds to the finaliter world, where they are granted opportunity to function as associate parents to their own and other children. This service of parental ministry may be later accredited on Jerusem as the fulfilment of ½ of the training which such ascenders are required to undergo in the families of the Material Sons and Daughters.
+\vs p045 6:7 \pc This probation nursery of Satania is maintained by certain morontia personalities on the finaliters’ world, one half of the planet being devoted to this work of child rearing. Here are received and reassembled certain children of surviving mortals, such as those offspring who perished on the evolutionary worlds before acquiring spiritual status as individuals. The ascension of either of its natural parents ensures that such a mortal child of the realms will be accorded repersonalization on the system finaliter planet and there be permitted to demonstrate by subsequent freewill choice whether or not it elects to follow the parental path of mortal ascension. Children here appear as on the nativity world except for the absence of sex differentiation. There is no reproduction of mortal kind after the life experience on the inhabited worlds.
+\vs p045 6:8 Mansion world students who have one or more children in the probationary nursery on the finaliters’ world, and who are deficient in essential parental experience, may apply for a Melchizedek permit which will effect their temporary transfer from ascension duties on the mansion worlds to the finaliter world, where they are granted opportunity to function as associate parents to their own and other children. This service of parental ministry may be later accredited on Jerusem as the fulfilment of one half of the training which such ascenders are required to undergo in the families of the Material Sons and Daughters.
 \vs p045 6:9 The probation nursery itself is supervised by 1,000 couples of Material Sons and Daughters, volunteers from the Jerusem colony of their order. They are immediately assisted by about an equal number of volunteer midsonite parental groups who stop off here to render this service on their way from the midsonite world of Satania to the unrevealed destiny on their special worlds of reservation among the finaliter spheres of Salvington.
 \usection{7.\bibnobreakspace The Melchizedek Schools}
 \vs p045 7:1 The Melchizedeks are the directors of that large corps of instructors --- partially spiritualized will creatures and others --- who function so acceptably on Jerusem and its associated worlds but especially on the 7 mansion worlds. These are the detention planets, where those mortals who fail to achieve fusion with their indwelling Adjusters during the life in the flesh are rehabilitated in transient form to receive further help and to enjoy extended opportunity for continuing their strivings for spiritual attainment, those very efforts which were prematurely interrupted by death. Or if, for any other reason of hereditary handicap, unfavourable environment, or conspiracy of circumstances, this soul attainment was not completed, no matter what the reason, all who are true of purpose and worthy in spirit find themselves, as themselves, present on the continuing planets, where they must learn to master the essentials of the eternal career, to possess themselves of traits which they could not, or did not, acquire during the lifetime in the flesh.
