--- a/tex/p055.tex
+++ b/tex/p055.tex
@@ -97,8 +97,8 @@
 \usection{6.\bibnobreakspace The Individual Mortal}
 \vs p055 6:1 As worlds advance in the settled status of light and life, society becomes increasingly peaceful. The individual, while no less independent and devoted to his family, has become more altruistic and fraternal.
 \vs p055 6:2 On Urantia, and as you are, you can have little appreciation of the advanced status and progressive nature of the enlightened races of these perfected worlds. These people are the flowering of the evolutionary races. But such beings are still mortal; they continue to breathe, eat, sleep, and drink. This great evolution is not heaven, but it is a sublime foreshadowing of the divine worlds of the Paradise ascent.
-\vs p055 6:3 On a normal world the biologic fitness of the mortal race was long since brought up to a high level during the post\hyp{}Adamic epochs; and now, from age to age throughout the settled eras the physical evolution of man continues. Both vision and hearing are extended. By now the population has become stationary in numbers. Reproduction is regulated in accordance with planetary requirements and innate hereditary endowments: The mortals on a planet during this age are divided into from 5 to 10 groups, and the lower groups are permitted to produce only ½ as many children as the higher. The continued improvement of such a magnificent race throughout the era of light and life is largely a matter of the selective reproduction of those racial strains which exhibit superior qualities of a social, philosophic, cosmic, and spiritual nature.
-\vs p055 6:4 \pc The Adjusters continue to come as in former evolutionary eras, and as the epochs pass, these mortals are increasingly able to commune with the indwelling Father fragment. During the embryonic and prespiritual stages of development the adjutant mind\hyp{}spirits are still functioning. The Holy Spirit and the ministry of angels are even more effective as the successive epochs of settled life are experienced. In the fourth stage of light and life the advanced mortals seem to experience considerable conscious contact with the spirit presence of the Master Spirit of superuniverse jurisdiction, while the philosophy of such a world is focused upon the attempt to comprehend the new revelations of God the Supreme. More than ½ of the human inhabitants on planets of this advanced status experience translation to the morontia state from among the living. Even so, “old things are passing away; behold, all things are becoming new.”
+\vs p055 6:3 On a normal world the biologic fitness of the mortal race was long since brought up to a high level during the post\hyp{}Adamic epochs; and now, from age to age throughout the settled eras the physical evolution of man continues. Both vision and hearing are extended. By now the population has become stationary in numbers. Reproduction is regulated in accordance with planetary requirements and innate hereditary endowments: The mortals on a planet during this age are divided into from 5 to 10 groups, and the lower groups are permitted to produce only one half as many children as the higher. The continued improvement of such a magnificent race throughout the era of light and life is largely a matter of the selective reproduction of those racial strains which exhibit superior qualities of a social, philosophic, cosmic, and spiritual nature.
+\vs p055 6:4 \pc The Adjusters continue to come as in former evolutionary eras, and as the epochs pass, these mortals are increasingly able to commune with the indwelling Father fragment. During the embryonic and prespiritual stages of development the adjutant mind\hyp{}spirits are still functioning. The Holy Spirit and the ministry of angels are even more effective as the successive epochs of settled life are experienced. In the fourth stage of light and life the advanced mortals seem to experience considerable conscious contact with the spirit presence of the Master Spirit of superuniverse jurisdiction, while the philosophy of such a world is focused upon the attempt to comprehend the new revelations of God the Supreme. More than one half of the human inhabitants on planets of this advanced status experience translation to the morontia state from among the living. Even so, “old things are passing away; behold, all things are becoming new.”
 \vs p055 6:5 We conceive that physical evolution will have attained its full development by the end of the fifth epoch of the light\hyp{}and\hyp{}life era. We observe that the upper limits of spiritual development associated with evolving human mind are determined by the Adjuster\hyp{}fusion level of conjoint morontia values and cosmic meanings. But concerning wisdom: While we do not really know, we conjecture that there can never be a limit to intellectual evolution and the attainment of wisdom. On a seventh\hyp{}stage world, wisdom can exhaust the material potentials, enter upon mota insight, and eventually even taste of absonite grandeur.
 \vs p055 6:6 We observe that on these highly evolved and long seventh\hyp{}stage worlds human beings fully learn the local universe language before they are translated; and I have visited a few very old planets where abandonters were teaching the older mortals the tongue of the superuniverse. And on these worlds I have observed the technique whereby the absonite personalities reveal the presence of the finaliters in the morontia temple.
 \vs p055 6:7 \pc This is the story of the magnificent goal of mortal striving on the evolutionary worlds; and it all takes place even before human beings enter upon their morontia careers; all of this splendid development is attainable by material mortals on the inhabited worlds, the very first stage of that endless and incomprehensible career of Paradise ascension and divinity attainment.
