--- a/tex/p067.tex
+++ b/tex/p067.tex
@@ -17,7 +17,7 @@
 \vs p067 2:6 For more than seven years this struggle continued. Not until every personality concerned had made a final decision, would or did the authorities of Edentia interfere or intervene. Not until then did Van and his loyal associates receive vindication and release from their prolonged anxiety and intolerable suspense.
 \usection{3.\bibnobreakspace The Seven Crucial Years}
 \vs p067 3:1 The outbreak of rebellion on Jerusem, the capital of Satania, was broadcast by the Melchizedek council. The emergency Melchizedeks were immediately dispatched to Jerusem, and Gabriel volunteered to act as the representative of the Creator Son, whose authority had been challenged. With this broadcast of the fact of rebellion in Satania the system was isolated, quarantined, from her sister systems. There was “war in heaven,” the headquarters of Satania, and it spread to every planet in the local system.
-\vs p067 3:2 On Urantia 40 members of the corporeal staff of 100 (including Van) refused to join the insurrection. Many of the staff’s human assistants (modified and otherwise) were also brave and noble defenders of Michael and his universe government. There was a terrible loss of personalities among seraphim and cherubim. Almost ½ of the administrator and transition seraphim assigned to the planet joined their leader and Daligastia in support of the cause of Lucifer. 40,119 of the primary midway creatures joined hands with Caligastia, but the remainder of these beings remained true to their trust.
+\vs p067 3:2 On Urantia 40 members of the corporeal staff of 100 (including Van) refused to join the insurrection. Many of the staff’s human assistants (modified and otherwise) were also brave and noble defenders of Michael and his universe government. There was a terrible loss of personalities among seraphim and cherubim. Almost one half of the administrator and transition seraphim assigned to the planet joined their leader and Daligastia in support of the cause of Lucifer. 40,119 of the primary midway creatures joined hands with Caligastia, but the remainder of these beings remained true to their trust.
 \vs p067 3:3 The traitorous Prince marshaled the disloyal midway creatures and other groups of rebel personalities and organized them to execute his bidding, while Van assembled the loyal midwayers and other faithful groups and began the great battle for the salvation of the planetary staff and other marooned celestial personalities.
 \vs p067 3:4 During the times of this struggle the loyalists dwelt in an unwalled and poorly protected settlement a few kilometres to the east of Dalamatia, but their dwellings were guarded day and night by the alert and ever\hyp{}watchful loyal midway creatures, and they had possession of the priceless tree of life.
 \vs p067 3:5 Upon the outbreak of rebellion, loyal cherubim and seraphim, with the aid of three faithful midwayers, assumed the custody of the tree of life and permitted only the 40 loyalists of the staff and their associated modified mortals to partake of the fruit and leaves of this energy plant. There were 56 of these modified Andonite associates of the staff, 16 of the Andonite attendants of the disloyal staff refusing to go into rebellion with their masters.
