--- a/tex/p072.tex
+++ b/tex/p072.tex
@@ -64,7 +64,7 @@
 \vs p072 6:4 \ublistelem{1.}\bibnobreakspace One day’s earnings each month are requisitioned by the federal government for this purpose, and in this country everybody works.
 \vs p072 6:5 \ublistelem{2.}\bibnobreakspace Bequests --- many wealthy citizens leave funds for this purpose.
 \vs p072 6:6 \ublistelem{3.}\bibnobreakspace The earnings of compulsory labour in the state mines. After the conscript workers support themselves and set aside their own retirement contributions, all excess profits on their labour are turned over to this pension fund.
-\vs p072 6:7 \ublistelem{4.}\bibnobreakspace The income from natural resources. All natural wealth on the continent is held as a social trust by the federal government, and the income therefrom is utilized for social purposes, such as disease prevention, education of geniuses, and expenses of especially promising individuals in the statesmanship schools. ½ of the income from natural resources goes to the old\hyp{}age pension fund.
+\vs p072 6:7 \ublistelem{4.}\bibnobreakspace The income from natural resources. All natural wealth on the continent is held as a social trust by the federal government, and the income therefrom is utilized for social purposes, such as disease prevention, education of geniuses, and expenses of especially promising individuals in the statesmanship schools. One half of the income from natural resources goes to the old\hyp{}age pension fund.
 \vs p072 6:8 \pc Although state and regional actuarial foundations supply many forms of protective insurance, old\hyp{}age pensions are solely administered by the federal government through the 10 regional departments.
 \vs p072 6:9 These government funds have long been honestly administered. Next to treason and murder, the heaviest penalties meted out by the courts are attached to betrayal of public trust. Social and political disloyalty are now looked upon as being the most heinous of all crimes.
 \usection{7.\bibnobreakspace Taxation}
@@ -77,7 +77,7 @@
 \vs p072 7:7 The federal government cannot go in debt, and a \bibfrac{3}{4} referendum is required before any state can borrow except for purposes of war. Since the federal government cannot incur debt, in the event of war the National Council of Defence is empowered to assess the states for money, as well as for men and materials, as it may be required. But no debt may run for more than 25 years.
 \vs p072 7:8 \pc Income to support the federal government is derived from the following 5 sources:
 \vs p072 7:9 \ublistelem{1.}\bibnobreakspace \bibemph{Import duties.} All imports are subject to a tariff designed to protect the standard of living on this continent, which is far above that of any other nation on the planet. These tariffs are set by the highest industrial court after both houses of the industrial congress have ratified the recommendations of the chief executive of economic affairs, who is the joint appointee of these two legislative bodies. The upper industrial house is elected by labour, the lower by capital.
-\vs p072 7:10 \ublistelem{2.}\bibnobreakspace \bibemph{Royalties.} The federal government encourages invention and original creations in the 10 regional laboratories, assisting all types of geniuses --- artists, authors, and scientists --- and protecting their patents. In return the government takes ½ the profits realized from all such inventions and creations, whether pertaining to machines, books, artistry, plants, or animals.
+\vs p072 7:10 \ublistelem{2.}\bibnobreakspace \bibemph{Royalties.} The federal government encourages invention and original creations in the 10 regional laboratories, assisting all types of geniuses --- artists, authors, and scientists --- and protecting their patents. In return the government takes one half the profits realized from all such inventions and creations, whether pertaining to machines, books, artistry, plants, or animals.
 \vs p072 7:11 \ublistelem{3.}\bibnobreakspace \bibemph{Inheritance tax.} The federal government levies a graduated inheritance tax ranging from 1\%\ to 50\%, depending on the size of an estate as well as on other conditions.
 \vs p072 7:12 \ublistelem{4.}\bibnobreakspace \bibemph{Military equipment.} The government earns a considerable sum from the leasing of military and naval equipment for commercial and recreational usages.
 \vs p072 7:13 \ublistelem{5.}\bibnobreakspace \bibemph{Natural resources.} The income from natural resources, when not fully required for the specific purposes designated in the charter of federal statehood, is turned into the national treasury.
@@ -105,7 +105,7 @@
 \vs p072 10:3 Efforts to prevent the breeding of criminals and defectives were begun over 100 years ago and have already yielded gratifying results. There are no prisons or hospitals for the insane. For one reason, there are only about 10\%\ as many of these groups as are found on Urantia.
 \usection{11.\bibnobreakspace Military Preparedness}
 \vs p072 11:1 Graduates of the federal military schools may be commissioned as “guardians of civilization” in 7 ranks, in accordance with ability and experience, by the president of the National Council of Defence. This council consists of 25 members, nominated by the highest parental, educational, and industrial tribunals, confirmed by the federal supreme court, and presided over ex officio by the chief of staff of co\hyp{}ordinated military affairs. Such members serve until they are 70 years of age.
-\vs p072 11:2 The courses pursued by such commissioned officers are 4 years in length and are invariably correlated with the mastery of some trade or profession. Military training is never given without this associated industrial, scientific, or professional schooling. When military training is finished, the individual has, during his 4 years’ course, received ½ of the education imparted in any of the special schools where the courses are likewise 4 years in length. In this way the creation of a professional military class is avoided by providing this opportunity for a large number of men to support themselves while securing the first ½ of a technical or professional training.
+\vs p072 11:2 The courses pursued by such commissioned officers are 4 years in length and are invariably correlated with the mastery of some trade or profession. Military training is never given without this associated industrial, scientific, or professional schooling. When military training is finished, the individual has, during his 4 years’ course, received one half of the education imparted in any of the special schools where the courses are likewise 4 years in length. In this way the creation of a professional military class is avoided by providing this opportunity for a large number of men to support themselves while securing the first half of a technical or professional training.
 \vs p072 11:3 Military service during peacetime is purely voluntary, and the enlistments in all branches of the service are for 4 years, during which every man pursues some special line of study in addition to the mastery of military tactics. Training in music is one of the chief pursuits of the central military schools and of the 25 training camps distributed about the periphery of the continent. During periods of industrial slackness many thousands of unemployed are automatically utilized in upbuilding the military defences of the continent on land and sea and in the air.
 \vs p072 11:4 \pc Although these people maintain a powerful war establishment as a defence against invasion by the surrounding hostile peoples, it may be recorded to their credit that they have not in over 100 years employed these military resources in an offensive war. They have become civilized to that point where they can vigorously defend civilization without yielding to the temptation to utilize their war powers in aggression. There have been no civil wars since the establishment of the united continental state, but during the last 2 centuries these people have been called upon to wage 9 fierce defensive conflicts, 3 of which were against mighty confederations of world powers. Although this nation maintains adequate defence against attack by hostile neighbours, it pays far more attention to the training of statesmen, scientists, and philosophers.
 \vs p072 11:5 When at peace with the world, all mobile defence mechanisms are quite fully employed in trade, commerce, and recreation. When war is declared, the entire nation is mobilized. Throughout the period of hostilities military pay obtains in all industries, and the chiefs of all military departments become members of the chief executive’s cabinet.
