--- a/tex/p077.tex
+++ b/tex/p077.tex
@@ -11,7 +11,7 @@
 \vs p077 1:6 \pc These creatures constituted the intelligence corps of the Prince’s administration. They ranged far and wide, studying and observing the world races and rendering other invaluable services to the Prince and his staff in the work of influencing human society remote from the planetary headquarters.
 \vs p077 1:7 This regime continued until the tragic days of the planetary rebellion, which ensnared a little over \bibfrac{4}{5} of the primary midwayers. The loyal corps entered the service of the Melchizedek receivers, functioning under the titular leadership of Van until the days of Adam.
 \usection{2.\bibnobreakspace The Nodite Race}
-\vs p077 2:1 While this is the narrative of the origin, nature, and function of the midway creatures of Urantia, the kinship between the two orders --- primary and secondary --- makes it necessary to interrupt the story of the primary midwayers at this point in order to follow out the line of descent from the rebel members of the corporeal staff of Prince Caligastia from the days of the planetary rebellion to the times of Adam. It was this line of inheritance which, in the early days of the second garden, furnished ½ of the ancestry for the secondary order of midway creatures.
+\vs p077 2:1 While this is the narrative of the origin, nature, and function of the midway creatures of Urantia, the kinship between the two orders --- primary and secondary --- makes it necessary to interrupt the story of the primary midwayers at this point in order to follow out the line of descent from the rebel members of the corporeal staff of Prince Caligastia from the days of the planetary rebellion to the times of Adam. It was this line of inheritance which, in the early days of the second garden, furnished one half of the ancestry for the secondary order of midway creatures.
 \vs p077 2:2 \pc The physical members of the Prince’s staff had been constituted sex creatures for the purpose of participating in the plan of procreating offspring embodying the combined qualities of their special order united with those of the selected stock of the Andon tribes, and all of this was in anticipation of the subsequent appearance of Adam. The Life Carriers had planned a new type of mortal embracing the union of the conjoint offspring of the Prince’s staff with the first\hyp{}generation offspring of Adam and Eve. They had thus projected a plan envisioning a new order of planetary creatures whom they hoped would become the teacher\hyp{}rulers of human society. Such beings were designed for social sovereignty, not civil sovereignty. But since this project almost completely miscarried, we shall never know what an aristocracy of benign leadership and matchless culture Urantia was thus deprived of. For when the corporeal staff later reproduced, it was subsequent to the rebellion and after they had been deprived of their connection with the life currents of the system.
 \vs p077 2:3 The postrebellion era on Urantia witnessed many unusual happenings. A great civilization --- the culture of Dalamatia --- was going to pieces. “The Nephilim (Nodites) were on earth in those days, and when these sons of the gods went in to the daughters of men and they bore to them, their children were the ‘mighty men of old,’ the ‘men of renown.’” While hardly “sons of the gods,” the staff and their early descendants were so regarded by the evolutionary mortals of those distant days; even their stature came to be magnified by tradition. This, then, is the origin of the well\hyp{}nigh universal folk tale of the gods who came down to earth and there with the daughters of men begot an ancient race of heroes. And all this legend became further confused with the race mixtures of the later appearing Adamites in the second garden.
 \vs p077 2:4 Since the 100 corporeal members of the Prince’s staff carried germ plasm of the Andonic human strains, it would naturally be expected that, if they engaged in sexual reproduction, their progeny would altogether resemble the offspring of other Andonite parents. But when the 60 rebels of the staff, the followers of Nod, actually engaged in sexual reproduction, their children proved to be far superior in almost every way to both the Andonite and the Sangik peoples. This unexpected excellence characterized not only physical and intellectual qualities but also spiritual capacities.
@@ -28,7 +28,7 @@
 \vs p077 3:2 Bablot proposed to erect a pretentious temple of racial glorification at the centre of their then occupied territory. This temple was to have a tower the like of which the world had never seen. It was to be a monumental memorial to their passing greatness. There were many who wished to have this monument erected in Dilmun, but others contended that such a great structure should be placed a safe distance from the dangers of the sea, remembering the traditions of the engulfment of their first capital, Dalamatia.
 \vs p077 3:3 Bablot planned that the new buildings should become the nucleus of the future centre of the Nodite culture and civilization. His counsel finally prevailed, and construction was started in accordance with his plans. The new city was to be named \bibemph{Bablot} after the architect and builder of the tower. This location later became known as Bablod and eventually as Babel.
 \vs p077 3:4 But the Nodites were still somewhat divided in sentiment as to the plans and purposes of this undertaking. Neither were their leaders altogether agreed concerning either construction plans or usage of the buildings after they should be completed. After 4½ years of work a great dispute arose about the object and motive for the erection of the tower. The contentions became so bitter that all work stopped. The food carriers spread the news of the dissension, and large numbers of the tribes began to forgather at the building site. Three differing views were propounded as to the purpose of building the tower:
-\vs p077 3:5 \ublistelem{1.}\bibnobreakspace The largest group, almost ½, desired to see the tower built as a memorial of Nodite history and racial superiority. They thought it ought to be a great and imposing structure which would challenge the admiration of all future generations.
+\vs p077 3:5 \ublistelem{1.}\bibnobreakspace The largest group, almost one half, desired to see the tower built as a memorial of Nodite history and racial superiority. They thought it ought to be a great and imposing structure which would challenge the admiration of all future generations.
 \vs p077 3:6 \ublistelem{2.}\bibnobreakspace The next largest faction wanted the tower designed to commemorate the Dilmun culture. They foresaw that Bablot would become a great centre of commerce, art, and manufacture.
 \vs p077 3:7 \ublistelem{3.}\bibnobreakspace The smallest and minority contingent held that the erection of the tower presented an opportunity for making atonement for the folly of their progenitors in participating in the Caligastia rebellion. They maintained that the tower should be devoted to the worship of the Father of all, that the whole purpose of the new city should be to take the place of Dalamatia --- to function as the cultural and religious centre for the surrounding barbarians.
 \vs p077 3:8 \pc The religious group were promptly voted down. The majority rejected the teaching that their ancestors had been guilty of rebellion; they resented such a racial stigma. Having disposed of one of the three angles to the dispute and failing to settle the other two by debate, they fell to fighting. The religionists, the noncombatants, fled to their homes in the south, while their fellows fought until well\hyp{}nigh obliterated.
