--- a/tex/p083.tex
+++ b/tex/p083.tex
@@ -58,7 +58,7 @@
 \vs p083 6:8 Pair marriage favours and fosters that intimate understanding and effective co\hyp{}operation which is best for parental happiness, child welfare, and social efficiency. Marriage, which began in crude coercion, is gradually evolving into a magnificent institution of self\hyp{}culture, self\hyp{}control, self\hyp{}expression, and self\hyp{}perpetuation.
 \usection{7.\bibnobreakspace The Dissolution of Wedlock}
 \vs p083 7:1 In the early evolution of the marital mores, marriage was a loose union which could be terminated at will, and the children always followed the mother; the mother\hyp{}child bond is instinctive and has functioned regardless of the developmental stage of the mores.
-\vs p083 7:2 Among primitive peoples only about ½ the marriages proved satisfactory. The most frequent cause for separation was barrenness, which was always blamed on the wife; and childless wives were believed to become snakes in the spirit world. Under the more primitive mores, divorce was had at the option of the man alone, and these standards have persisted to the XX century among some peoples.
+\vs p083 7:2 Among primitive peoples only about one half the marriages proved satisfactory. The most frequent cause for separation was barrenness, which was always blamed on the wife; and childless wives were believed to become snakes in the spirit world. Under the more primitive mores, divorce was had at the option of the man alone, and these standards have persisted to the XX century among some peoples.
 \vs p083 7:3 As the mores evolved, certain tribes developed two forms of marriage: the ordinary, which permitted divorce, and the priest marriage, which did not allow for separation. The inauguration of wife purchase and wife dowry, by introducing a property penalty for marriage failure, did much to lessen separation. And, indeed, many modern unions are stabilized by this ancient property factor.
 \vs p083 7:4 The social pressure of community standing and property privileges has always been potent in the maintenance of the marriage taboos and mores. Down through the ages marriage has made steady progress and stands on advanced ground in the modern world, notwithstanding that it is threateningly assailed by widespread dissatisfaction among those peoples where individual choice --- a new liberty --- figures most largely. While these upheavals of adjustment appear among the more progressive races as a result of suddenly accelerated social evolution, among the less advanced peoples marriage continues to thrive and slowly improve under the guidance of the older mores.
 \vs p083 7:5 The new and sudden substitution of the more ideal but extremely individualistic love motive in marriage for the older and long\hyp{}established property motive, has unavoidably caused the marriage institution to become temporarily unstable. Man’s marriage motives have always far transcended actual marriage morals, and in the XIX and XX centuries the Occidental ideal of marriage has suddenly far outrun the self\hyp{}centred and but partially controlled sex impulses of the races. The presence of large numbers of unmarried persons in any society indicates the temporary breakdown or the transition of the mores.
