--- a/tex/p088.tex
+++ b/tex/p088.tex
@@ -52,6 +52,6 @@
 \vs p088 6:5 \pc Magic was the branch off the evolutionary religious tree which eventually bore the fruit of a scientific age. Belief in astrology led to the development of astronomy; belief in a philosopher’s stone led to the mastery of metals, while belief in magic numbers founded the science of mathematics.
 \vs p088 6:6 \pc But a world so filled with charms did much to destroy all personal ambition and initiative. The fruits of extra labour or of diligence were looked upon as magical. If a man had more grain in his field than his neighbour, he might be haled before the chief and charged with enticing this extra grain from the indolent neighbour’s field. Indeed, in the days of barbarism it was dangerous to know very much; there was always the chance of being executed as a black artist.
 \vs p088 6:7 Gradually science is removing the gambling element from life. But if modern methods of education should fail, there would be an almost immediate reversion to the primitive beliefs in magic. These superstitions still linger in the minds of many so\hyp{}called civilized people. Language contains many fossils which testify that the race has long been steeped in magical superstition, such words as spellbound, ill\hyp{}starred, possessions, inspiration, spirit away, ingenuity, entrancing, thunderstruck, and astonished. And intelligent human beings still believe in good luck, evil eye, and astrology.
-\vs p088 6:8 Ancient magic was the cocoon of modern science, indispensable in its time but now no longer useful. And so the phantasms of ignorant superstition agitated the primitive minds of men until the concepts of science could be born. Today, Urantia is in the twilight zone of this intellectual evolution. ½ the world is grasping eagerly for the light of truth and the facts of scientific discovery, while the other ½ languishes in the arms of ancient superstition and but thinly disguised magic.
+\vs p088 6:8 Ancient magic was the cocoon of modern science, indispensable in its time but now no longer useful. And so the phantasms of ignorant superstition agitated the primitive minds of men until the concepts of science could be born. Today, Urantia is in the twilight zone of this intellectual evolution. One half the world is grasping eagerly for the light of truth and the facts of scientific discovery, while the other half languishes in the arms of ancient superstition and but thinly disguised magic.
 \vsetoff
 \vs p088 6:9 [Presented by a Brilliant Evening Star of Nebadon.]
