--- a/tex/p090.tex
+++ b/tex/p090.tex
@@ -21,7 +21,7 @@
 \vs p090 2:8 The Greeks believed in the efficacy of oracular advice, the Chinese used magic as protection against demons, shamanism flourished in India, and it still openly persists in central Asia. It is an only recently abandoned practice throughout much of the world.
 \vs p090 2:9 Ever and anon, true prophets and teachers arose to denounce and expose shamanism. Even the vanishing red man had such a prophet within the past 100 years, the Shawnee Tenskwatawa, who predicted the eclipse of the sun in 1806 and denounced the vices of the white man. Many true teachers have appeared among the various tribes and races all through the long ages of evolutionary history. And they will ever continue to appear to challenge the shamans or priests of any age who oppose general education and attempt to thwart scientific progress.\fnc{\ldots{}the Shawnee \bibtextul{Teuskwatawa,} who predicted the eclipse of the sun in \bibtextul{1808} and denounced the vices of the white man. \bibexpl{Tenskwatawa is the standard transliteration for the Shawnee prophet’s name; the spelling in the first edition may have been caused by a mistaken keystroke or may have been the result of an error in reading the original manuscript. (Regarding the latter possibility, see the note for \bibref[195:3.10.)]{p0195 37:10} --- 1808 --- Since nothing in the text is dependent on the 1808 date, nor linked to it in any way, and since the change from the incorrect to the correct date --- 1806 --- is just one digit/keystroke, this is no more significant a change from a technical standpoint than the correction of a spelling mistake --- except that so many people have spent so much time making so much over this obvious mistake in The Urantia Book.}}
 \vs p090 2:10 In many ways and by devious methods the olden shamans established their reputations as voices of God and custodians of providence. They sprinkled the newborn with water and conferred names upon them; they circumcised the males. They presided over all burial ceremonies and made due announcement of the safe arrival of the dead in spiritland.
-\vs p090 2:11 The shamanic priests and medicine men often became very wealthy through the accretion of their various fees which were ostensibly offerings to the spirits. Not infrequently a shaman would accumulate practically all the material wealth of his tribe. Upon the death of a wealthy man it was customary to divide his property equally with the shaman and some public enterprise or charity. This practice still obtains in some parts of Tibet, where ½ the male population belongs to this class of nonproducers.
+\vs p090 2:11 The shamanic priests and medicine men often became very wealthy through the accretion of their various fees which were ostensibly offerings to the spirits. Not infrequently a shaman would accumulate practically all the material wealth of his tribe. Upon the death of a wealthy man it was customary to divide his property equally with the shaman and some public enterprise or charity. This practice still obtains in some parts of Tibet, where one half the male population belongs to this class of nonproducers.
 \vs p090 2:12 The shamans dressed well and usually had a number of wives; they were the original aristocracy, being exempt from all tribal restrictions. They were very often of low\hyp{}grade mind and morals. They suppressed their rivals by denominating them witches or sorcerers and very frequently rose to such positions of influence and power that they were able to dominate the chiefs or kings.
 \vs p090 2:13 Primitive man regarded the shaman as a necessary evil; he feared him but did not love him. Early man respected knowledge; he honoured and rewarded wisdom. The shaman was mostly fraud, but the veneration for shamanism well illustrates the premium put upon wisdom in the evolution of the race.
 \usection{3.\bibnobreakspace The Shamanic Theory of Disease and Death}
