--- a/tex/p094.tex
+++ b/tex/p094.tex
@@ -90,7 +90,7 @@
 \vs p094 8:18 The great truth of Siddhartha’s teaching was his proclamation of a universe of absolute justice. He taught the best godless philosophy ever invented by mortal man; it was the ideal humanism and most effectively removed all grounds for superstition, magical rituals, and fear of ghosts or demons.
 \vs p094 8:19 The great weakness in the original gospel of Buddhism was that it did not produce a religion of unselfish social service. The Buddhistic brotherhood was, for a long time, not a fraternity of believers but rather a community of student teachers. Gautama forbade their receiving money and thereby sought to prevent the growth of hierarchal tendencies. Gautama himself was highly social; indeed, his life was much greater than his preachment.
 \usection{9.\bibnobreakspace The Spread of Buddhism}
-\vs p094 9:1 Buddhism prospered because it offered salvation through belief in the Buddha, the enlightened one. It was more representative of the Melchizedek truths than any other religious system to be found throughout eastern Asia. But Buddhism did not become widespread as a religion until it was espoused in self\hyp{}protection by the low\hyp{}caste monarch Asoka, who, next to Ikhnaton in Egypt, was one of the most remarkable civil rulers between Melchizedek and Michael. Asoka built a great Indian empire through the propaganda of his Buddhist missionaries. During a period of 25 years he trained and sent forth more than 17,000 missionaries to the farthest frontiers of all the known world. In one generation he made Buddhism the dominant religion of ½ the world. It soon became established in Tibet, Kashmir, Ceylon, Burma, Java, Siam, Korea, China, and Japan. And generally speaking, it was a religion vastly superior to those which it supplanted or upstepped.
+\vs p094 9:1 Buddhism prospered because it offered salvation through belief in the Buddha, the enlightened one. It was more representative of the Melchizedek truths than any other religious system to be found throughout eastern Asia. But Buddhism did not become widespread as a religion until it was espoused in self\hyp{}protection by the low\hyp{}caste monarch Asoka, who, next to Ikhnaton in Egypt, was one of the most remarkable civil rulers between Melchizedek and Michael. Asoka built a great Indian empire through the propaganda of his Buddhist missionaries. During a period of 25 years he trained and sent forth more than 17,000 missionaries to the farthest frontiers of all the known world. In one generation he made Buddhism the dominant religion of one half the world. It soon became established in Tibet, Kashmir, Ceylon, Burma, Java, Siam, Korea, China, and Japan. And generally speaking, it was a religion vastly superior to those which it supplanted or upstepped.
 \vs p094 9:2 The spread of Buddhism from its homeland in India to all of Asia is one of the thrilling stories of the spiritual devotion and missionary persistence of sincere religionists. The teachers of Gautama’s gospel not only braved the perils of the overland caravan routes but faced the dangers of the China Seas as they pursued their mission over the Asiatic continent, bringing to all peoples the message of their faith. But this Buddhism was no longer the simple doctrine of Gautama; it was the miraculized gospel which made him a god. And the farther Buddhism spread from its highland home in India, the more unlike the teachings of Gautama it became, and the more like the religions it supplanted, it grew to be.
 \vs p094 9:3 Buddhism, later on, was much affected by Taoism in China, Shinto in Japan, and Christianity in Tibet. After 1,000 years, in India Buddhism simply withered and expired. It became Brahmanized and later abjectly surrendered to Islam, while throughout much of the rest of the Orient it degenerated into a ritual which Gautama Siddhartha would never have recognized.
 \vs p094 9:4 In the south the fundamentalist stereotype of the teachings of Siddhartha persisted in Ceylon, Burma, and the Indo\hyp{}China peninsula. This is the Hinayana division of Buddhism which clings to the early or asocial doctrine.
