--- a/tex/p096.tex
+++ b/tex/p096.tex
@@ -32,7 +32,7 @@
 \vs p096 3:4 Moses endeavoured to negotiate diplomatically for the freedom of his fellow Semites. He and his brother entered into a compact with the king of Egypt whereby they were granted permission peaceably to leave the valley of the Nile for the Arabian Desert. They were to receive a modest payment of money and goods in token of their long service in Egypt. The Hebrews for their part entered into an agreement to maintain friendly relations with the Pharaohs and not to join in any alliance against Egypt. But the king later saw fit to repudiate this treaty, giving as his reason the excuse that his spies had discovered disloyalty among the Bedouin slaves. He claimed they sought freedom for the purpose of going into the desert to organize the nomads against Egypt.
 \vs p096 3:5 But Moses was not discouraged; he bided his time, and in less than a year, when the Egyptian military forces were fully occupied in resisting the simultaneous onslaughts of a strong Libyan thrust from the south and a Greek naval invasion from the north, this intrepid organizer led his compatriots out of Egypt in a spectacular night flight. This dash for liberty was carefully planned and skillfully executed. And they were successful, notwithstanding that they were hotly pursued by Pharaoh and a small body of Egyptians, who all fell before the fugitives’ defence, yielding much booty, all of which was augmented by the loot of the advancing host of escaping slaves as they marched on toward their ancestral desert home.
 \usection{4.\bibnobreakspace The Proclamation of Yahweh}
-\vs p096 4:1 The evolution and elevation of the Mosaic teaching has influenced almost ½ of all the world, and still does even in the XX century. While Moses comprehended the more advanced Egyptian religious philosophy, the Bedouin slaves knew little about such teachings, but they had never entirely forgotten the god of Mount Horeb, whom their ancestors had called Yahweh.
+\vs p096 4:1 The evolution and elevation of the Mosaic teaching has influenced almost one half of all the world, and still does even in the XX century. While Moses comprehended the more advanced Egyptian religious philosophy, the Bedouin slaves knew little about such teachings, but they had never entirely forgotten the god of Mount Horeb, whom their ancestors had called Yahweh.
 \vs p096 4:2 Moses had heard of the teachings of Machiventa Melchizedek from both his father and his mother, their commonness of religious belief being the explanation for the unusual union between a woman of royal blood and a man from a captive race. Moses’ father\hyp{}in\hyp{}law was a Kenite worshipper of El Elyon, but the emancipator’s parents were believers in El Shaddai. Moses thus was educated an El Shaddaist; through the influence of his father\hyp{}in\hyp{}law he became an El Elyonist; and by the time of the Hebrew encampment about Mount Sinai after the flight from Egypt, he had formulated a new and enlarged concept of Deity (derived from all his former beliefs), which he wisely decided to proclaim to his people as an expanded concept of their olden tribal god, Yahweh.
 \vs p096 4:3 Moses had endeavoured to teach these Bedouins the idea of El Elyon, but before leaving Egypt, he had become convinced they would never fully comprehend this doctrine. Therefore he deliberately determined upon the compromise adoption of their tribal god of the desert as the one and only god of his followers. Moses did not specifically teach that other peoples and nations might not have other gods, but he did resolutely maintain that Yahweh was over and above all, especially to the Hebrews. But always was he plagued by the awkward predicament of trying to present his new and higher idea of Deity to these ignorant slaves under the guise of the ancient term Yahweh, which had always been symbolized by the golden calf of the Bedouin tribes.
 \vs p096 4:4 \pc The fact that Yahweh was the god of the fleeing Hebrews explains why they tarried so long before the holy mountain of Sinai, and why they there received the ten commandments which Moses promulgated in the name of Yahweh, the god of Horeb. During this lengthy sojourn before Sinai the religious ceremonials of the newly evolving Hebrew worship were further perfected.
