--- a/tex/p137.tex
+++ b/tex/p137.tex
@@ -18,7 +18,7 @@
 \vs p137 2:5 It suddenly dawned on Philip that Jesus was a really great man, possibly the Messiah, and he decided to abide by Jesus’ decision in this matter; and he went straight to him, asking, “Teacher, shall I go down to John or shall I join my friends who follow you?” And Jesus answered, \textcolour{ubdarkred}{“Follow me.”} Philip was thrilled with the assurance that he had found the Deliverer.
 \vs p137 2:6 \pc Philip now motioned to the group to remain where they were while he hurried back to break the news of his decision to his friend Nathaniel, who still tarried behind under the mulberry tree, turning over in his mind the many things which he had heard concerning John the Baptist, the coming kingdom, and the expected Messiah. Philip broke in upon these meditations, exclaiming, “I have found the Deliverer, him of whom Moses and the prophets wrote and whom John has proclaimed.” Nathaniel, looking up, inquired, “Whence comes this teacher?” And Philip replied, “He is Jesus of Nazareth, the son of Joseph, the carpenter, more recently residing at Capernaum.” And then, somewhat shocked, Nathaniel asked, “Can any such good thing come out of Nazareth?” But Philip, taking him by the arm, said, “Come and see.”
 \vs p137 2:7 Philip led Nathaniel to Jesus, who, looking benignly into the face of the sincere doubter, said: \textcolour{ubdarkred}{“Behold a genuine Israelite, in whom there is no deceit. Follow me.”} And Nathaniel, turning to Philip, said: “You are right. He is indeed a master of men. I will also follow, if I am worthy.” And Jesus nodded to Nathaniel, again saying, \textcolour{ubdarkred}{“Follow me.”}
-\vs p137 2:8 \pc Jesus had now assembled ½ of his future corps of intimate associates, 5 who had for some time known him and 1 stranger, Nathaniel. Without further delay they crossed the Jordan and, going by the village of Nain, reached Nazareth late that evening.
+\vs p137 2:8 \pc Jesus had now assembled one half of his future corps of intimate associates, 5 who had for some time known him and 1 stranger, Nathaniel. Without further delay they crossed the Jordan and, going by the village of Nain, reached Nazareth late that evening.
 \vs p137 2:9 They all remained overnight with Joseph in Jesus’ boyhood home. The associates of Jesus little understood why their new\hyp{}found teacher was so concerned with completely destroying every vestige of his writing which remained about the home in the form of the ten commandments and other mottoes and sayings. But this proceeding, together with the fact that they never saw him subsequently write --- except upon the dust or in the sand --- made a deep impression upon their minds.
 \usection{3.\bibnobreakspace The Visit to Capernaum}
 \vs p137 3:1 The next day Jesus sent his apostles on to Cana, since all of them were invited to the wedding of a prominent young woman of that town, while he prepared to pay a hurried visit to his mother at Capernaum, stopping at Magdala to see his brother Jude.
