--- a/tex/p152.tex
+++ b/tex/p152.tex
@@ -10,7 +10,7 @@
 \vs p152 1:4 \pc Jesus’ apostles, let alone the common people, could not understand the nature and attributes of this God\hyp{}man. Neither has any subsequent generation been able to evaluate what took place on earth in the person of Jesus of Nazareth. And there can never occur an opportunity for either science or religion to check up on these remarkable events for the simple reason that such an extraordinary situation can never again occur, either on this world or on any other world in Nebadon. Never again, on any world in this entire universe, will a being appear in the likeness of mortal flesh, at the same time embodying all the attributes of creative energy combined with spiritual endowments which transcend time and most other material limitations.
 \vs p152 1:5 Never before Jesus was on earth, nor since, has it been possible so directly and graphically to secure the results attendant upon the strong and living faith of mortal men and women. To repeat these phenomena, we would have to go into the immediate presence of Michael, the Creator, and find him as he was in those days --- the Son of Man. Likewise, today, while his absence prevents such material manifestations, you should refrain from placing any sort of limitation on the possible exhibition of his \bibemph{spiritual power.} Though the Master is absent as a material being, he is present as a spiritual influence in the hearts of men. By going away from the world, Jesus made it possible for his spirit to live alongside that of his Father which indwells the minds of all mankind.
 \usection{2.\bibnobreakspace Feeding the Five Thousand}
-\vs p152 2:1 Jesus continued to teach the people by day while he instructed the apostles and evangelists at night. On Friday he declared a furlough of one week that all his followers might go home or to their friends for a few days before preparing to go up to Jerusalem for the Passover. But more than ½ of his disciples refused to leave him, and the multitude was daily increasing in size, so much so that David Zebedee desired to establish a new encampment, but Jesus refused consent. The Master had so little rest over the Sabbath that on Sunday morning, March 27, he sought to get away from the people. Some of the evangelists were left to talk to the multitude while Jesus and the 12 planned to escape, unnoticed, to the opposite shore of the lake, where they proposed to obtain much needed rest in a beautiful park south of Bethsaida\hyp{}Julias. This region was a favourite resorting place for Capernaum folks; they were all familiar with these parks on the eastern shore.
+\vs p152 2:1 Jesus continued to teach the people by day while he instructed the apostles and evangelists at night. On Friday he declared a furlough of one week that all his followers might go home or to their friends for a few days before preparing to go up to Jerusalem for the Passover. But more than one half of his disciples refused to leave him, and the multitude was daily increasing in size, so much so that David Zebedee desired to establish a new encampment, but Jesus refused consent. The Master had so little rest over the Sabbath that on Sunday morning, March 27, he sought to get away from the people. Some of the evangelists were left to talk to the multitude while Jesus and the 12 planned to escape, unnoticed, to the opposite shore of the lake, where they proposed to obtain much needed rest in a beautiful park south of Bethsaida\hyp{}Julias. This region was a favourite resorting place for Capernaum folks; they were all familiar with these parks on the eastern shore.
 \vs p152 2:2 But the people would not have it so. They saw the direction taken by Jesus’ boat, and hiring every craft available, they started out in pursuit. Those who could not obtain boats fared forth on foot to walk around the upper end of the lake.
 \vs p152 2:3 By late afternoon more than 1,000 persons had located the Master in one of the parks, and he spoke to them briefly, being followed by Peter. Many of these people had brought food with them, and after eating the evening meal, they gathered about in small groups while Jesus’ apostles and disciples taught them.
 \vs p152 2:4 Monday afternoon the multitude had increased to more than 3,000. And still --- way into the evening --- the people continued to flock in, bringing all manner of sick folks with them. Hundreds of interested persons had made their plans to stop over at Capernaum to see and hear Jesus on their way to the Passover, and they simply refused to be disappointed. By Wednesday noon about 5,000 men, women, and children were assembled here in this park to the south of Bethsaida\hyp{}Julias. The weather was pleasant, it being near the end of the rainy season in this locality.
