--- a/tex/p171.tex
+++ b/tex/p171.tex
@@ -9,7 +9,7 @@
 \vs p171 0:7 In asking for places on the right hand and on the left hand of Jesus at Jerusalem, the sons of Zebedee little realized that in less than one month their beloved teacher would be hanging on a Roman cross with a dying thief on one side and another transgressor on the other side. And their mother, who was present at the crucifixion, well remembered the foolish request she had made of Jesus at Pella regarding the honours she so unwisely sought for her apostle sons.
 \usection{1.\bibnobreakspace The Departure from Pella}
 \vs p171 1:1 On the forenoon of Monday, March 13, Jesus and his 12 apostles took final leave of the Pella encampment, starting south on their tour of the cities of southern Perea, where Abner’s associates were at work. They spent more than two weeks visiting among the 70 and then went directly to Jerusalem for the Passover.
-\vs p171 1:2 When the Master left Pella, the disciples encamped with the apostles, about 1,000 in number, followed after him. About ½ of this group left him at the Jordan ford on the road to Jericho when they learned he was going over to Heshbon, and after he had preached the sermon on “Counting the Cost.” They went on up to Jerusalem, while the other half followed him for two weeks, visiting the towns in southern Perea.
+\vs p171 1:2 When the Master left Pella, the disciples encamped with the apostles, about 1,000 in number, followed after him. About one half of this group left him at the Jordan ford on the road to Jericho when they learned he was going over to Heshbon, and after he had preached the sermon on “Counting the Cost.” They went on up to Jerusalem, while the other half followed him for two weeks, visiting the towns in southern Perea.
 \vs p171 1:3 In a general way, most of Jesus’ immediate followers understood that the camp at Pella had been abandoned, but they really thought this indicated that their Master at last intended to go to Jerusalem and lay claim to David’s throne. A large majority of his followers never were able to grasp any other concept of the kingdom of heaven; no matter what he taught them, they would not give up this Jewish idea of the kingdom.
 \vs p171 1:4 Acting on the instructions of the Apostle Andrew, David Zebedee closed the visitors’ camp at Pella on Wednesday, March 15. At this time almost 4,000 visitors were in residence, and this does not include the 1,000 and more persons who sojourned with the apostles at what was known as the teachers’ camp, and who went south with Jesus and the 12. Much as David disliked to do it, he sold the entire equipment to numerous buyers and proceeded with the funds to Jerusalem, subsequently turning the money over to Judas Iscariot.
 \vs p171 1:5 \pc David was present in Jerusalem during the tragic last week, taking his mother back with him to Bethsaida after the crucifixion. While awaiting Jesus and the apostles, David stopped with Lazarus at Bethany and became tremendously agitated by the manner in which the Pharisees had begun to persecute and harass him since his resurrection. Andrew had directed David to discontinue the messenger service; and this was construed by all as an indication of the early establishment of the kingdom at Jerusalem. David found himself without a job, and he had about decided to become the self\hyp{}appointed defender of Lazarus when presently the object of his indignant solicitude fled in haste to Philadelphia. Accordingly, sometime after the resurrection and also after the death of his mother, David betook himself to Philadelphia, having first assisted Martha and Mary in disposing of their real estate; and there, in association with Abner and Lazarus, he spent the remainder of his life, becoming the financial overseer of all those large interests of the kingdom which had their centre at Philadelphia during the lifetime of Abner.
@@ -50,7 +50,7 @@
 }
 \usection{6.\bibnobreakspace The Visit to Zaccheus}
 \vs p171 6:1 When the Master’s procession entered Jericho, it was nearing sundown, and he was minded to abide there for the night. As Jesus passed by the customs house, Zaccheus the chief publican, or tax collector, happened to be present, and he much desired to see Jesus. This chief publican was very rich and had heard much about this prophet of Galilee. He had resolved that he would see what sort of a man Jesus was the next time he chanced to visit Jericho; accordingly, Zaccheus sought to press through the crowd, but it was too great, and being short of stature, he could not see over their heads. And so the chief publican followed on with the crowd until they came near the centre of the city and not far from where he lived. When he saw that he would be unable to penetrate the crowd, and thinking that Jesus might be going right on through the city without stopping, he ran on ahead and climbed up into a sycamore tree whose spreading branches overhung the roadway. He knew that in this way he could obtain a good view of the Master as he passed by. And he was not disappointed, for, as Jesus passed by, he stopped and, looking up at Zaccheus, said: \textcolour{ubdarkred}{“Make haste, Zaccheus, and come down, for tonight I must abide at your house.”} And when Zaccheus heard these astonishing words, he almost fell out of the tree in his haste to get down, and going up to Jesus, he expressed great joy that the Master should be willing to stop at his house.
-\vs p171 6:2 They went at once to the home of Zaccheus, and those who lived in Jericho were much surprised that Jesus would consent to abide with the chief publican. Even while the Master and his apostles lingered with Zaccheus before the door of his house, one of the Jericho Pharisees, standing near by, said: “You see how this man has gone to lodge with a sinner, an apostate son of Abraham who is an extortioner and a robber of his own people.” And when Jesus heard this, he looked down at Zaccheus and smiled. Then Zaccheus stood upon a stool and said: “Men of Jericho, hear me! I may be a publican and a sinner, but the great Teacher has come to abide in my house; and before he goes in, I tell you that I am going to bestow ½ of all my goods upon the poor, and beginning tomorrow, if I have wrongfully exacted aught from any man, I will restore fourfold. I am going to seek salvation with all my heart and learn to do righteousness in the sight of God.”
+\vs p171 6:2 They went at once to the home of Zaccheus, and those who lived in Jericho were much surprised that Jesus would consent to abide with the chief publican. Even while the Master and his apostles lingered with Zaccheus before the door of his house, one of the Jericho Pharisees, standing near by, said: “You see how this man has gone to lodge with a sinner, an apostate son of Abraham who is an extortioner and a robber of his own people.” And when Jesus heard this, he looked down at Zaccheus and smiled. Then Zaccheus stood upon a stool and said: “Men of Jericho, hear me! I may be a publican and a sinner, but the great Teacher has come to abide in my house; and before he goes in, I tell you that I am going to bestow one half of all my goods upon the poor, and beginning tomorrow, if I have wrongfully exacted aught from any man, I will restore fourfold. I am going to seek salvation with all my heart and learn to do righteousness in the sight of God.”
 \vs p171 6:3 When Zaccheus had ceased speaking, Jesus said: \textcolour{ubdarkred}{“Today has salvation come to this home, and you have become indeed a son of Abraham.”} And turning to the crowd assembled about them, Jesus said: \textcolour{ubdarkred}{“And marvel not at what I say nor take offence at what we do, for I have all along declared that the Son of Man has come to seek and to save that which is lost.”}
 \vs p171 6:4 They lodged with Zaccheus for the night. On the morrow they arose and made their way up the “road of robbers” to Bethany on their way to the Passover at Jerusalem.
 \usection{7.\bibnobreakspace “As Jesus Passed By”}
