--- a/tex/p030.tex
+++ b/tex/p030.tex
@@ -376,7 +376,7 @@
 \vs p030 3:9 The entire ascendant plan of mortal progression is characterized by the practice of giving out to other beings new truth and experience just as soon as acquired. You work your way through the long school of Paradise attainment by serving as teachers to those pupils just behind you in the scale of progression.
 \vs p030 3:10 \ublistelem{5.}\bibnobreakspace \bibemph{The Various Reserve Corps.} Vast reserves of beings not under our immediate supervision are mobilized on Uversa as the reserve\hyp{}corps colony. There are 70 primary divisions of this colony on Uversa, and it is a liberal education to be permitted to spend a season with these extraordinary personalities. Similar general reserves are maintained on Salvington and other universe capitals; they are dispatched on active service on the requisition of their respective group directors.
 \vs p030 3:11 \ublistelem{6.}\bibnobreakspace \bibemph{The Student Visitors.} From all the universe a constant stream of celestial visitors pours through the various headquarters worlds. As individuals and as classes these various types of beings flock in upon us as observers, exchange pupils, and student helpers. On Uversa, at present, there are over one billion persons in this courtesy colony. Some of these visitors may tarry a day, others may remain a year, all dependent on the nature of their mission. This colony contains almost every class of universe beings except Creator personalities and morontia mortals.
-\vs p030 3:12 Morontia mortals are student visitors only within the confines of the local universe of their origin. They may visit in a superuniverse capacity only after they have attained spirit status. Fully ½ of our visitor colony consists of “stopovers,” beings en route elsewhere who pause to visit the Orvonton capital. These personalities may be executing a universe assignment, or they may be enjoying a period of leisure --- freedom from assignment. The privilege of intrauniverse travel and observation is a part of the career of all ascending beings. The human desire to travel and observe new peoples and worlds will be fully gratified during the long and eventful climb to Paradise through the local, super-, and central universes.
+\vs p030 3:12 Morontia mortals are student visitors only within the confines of the local universe of their origin. They may visit in a superuniverse capacity only after they have attained spirit status. Fully one half of our visitor colony consists of “stopovers,” beings en route elsewhere who pause to visit the Orvonton capital. These personalities may be executing a universe assignment, or they may be enjoying a period of leisure --- freedom from assignment. The privilege of intrauniverse travel and observation is a part of the career of all ascending beings. The human desire to travel and observe new peoples and worlds will be fully gratified during the long and eventful climb to Paradise through the local, super-, and central universes.
 \vs p030 3:13 \ublistelem{7.}\bibnobreakspace \bibemph{The Ascending Pilgrims.} As the ascending pilgrims are assigned to various services in connection with their Paradise progression, they are domiciled as a courtesy colony on the various headquarters spheres. While functioning here and there throughout a superuniverse, such groups are largely self\hyp{}governing. They are an ever\hyp{}shifting colony embracing all orders of evolutionary mortals and their ascending associates.
 \usection{4.\bibnobreakspace The Ascending Mortals}
 \vs p030 4:1 While the mortal survivors of time and space are denominated \bibemph{ascending pilgrims} when accredited for the progressive ascent to Paradise, these evolutionary creatures occupy such an important place in these narratives that we here desire to present a synopsis of the following 7 stages of the ascending universe career:
